# HYDRA-Z-CLI-First-Agent-Runtime-General-Security-Skills-

./: Dockerfile  README.md  pyproject.toml
hydra_z/: cli.py
hydra_z/core/: executor.py  io.py  policy.py  schemas.py  skills.py
hydra_z/skills/: deps_osv_scan.py  files_read.py  files_write.py  http_fetch.py  secrets_scan.py
plans/: 01_general_fetch.json  02_security_secrets.json  03_security_deps_osv.json
policies/: default.yml
