[project]
name = "hydra-z"
version = "0.1.0"
description = "HYDRA Z — CLI-first agent runtime with skills, policy, telemetry, and replay."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.2",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
]

[project.scripts]
hydraz = "hydra_z.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
